# llama.cpp

./: .gitignore  convert_hf_to_gguf.py  convert_hf_to_gguf_bert_mod.py
common/: chat.cpp
gguf-py/gguf/: constants.py  tensor_mapping.py
src/: llama-arch.cpp  llama-arch.h  llama-graph.cpp  llama-model.cpp
src/models/: bert.cpp
tools/: CMakeLists.txt
tools/server/: EXTENSIONS.md  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-task.cpp  server-task.h  server.cpp
tools/server-coro/: CMakeLists.txt  DISTILBERT.md  config.h.in~  config.m4  configure~  coro-extension.cpp  coro-extension.h  httplib_client.cpp  httplib_client.h  httplib_server.h  make.sh  package-lock.json  server-common.cpp  server-common.h  server-context.cpp  server-context.h  server-http.cpp  server-http.h  server-models.cpp  server-models.h  server-queue.cpp  server-queue.h  server-task.cpp  server-task.h  server-zmq.cpp  server.cpp  test_cancel.php  test_concurrent.php  test_http_client.php  test_http_disconnect.php  test_http_server.php  test_init.php  test_memory_leak.php  test_memory_rss.php  test_node_client.js  test_signal.php  test_stream_noop.php
tools/server-coro/docs/: coroutine-eventfd-integration-large.md  eventfd-coroutine-integration.md
